homepage starting to come together

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="/static/images/guitaarrr_logo.png">
+        <img src="/static/images/guitaarrr_logo.png" align-items="center">
         <div>
             <nav>
                 <span>home</span>
