--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block home %}
 <section>
 
-    <img src ="/static/images/pirate guitarist.webp">
+    <img src ="/static/images/pirate_guitarist_sm.jpg">
 
 </section>
 {% endblock %}
