sorted header placer and pirate guitarist image

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block home %}
 <section>
 
-    <img src ="/static/images/pirate_guitarist_sm.jpg">
+    <img src ="/static/images/pirate_guitarist_sm.jpg" alt="pirate guitarist" class="center">
 
 </section>
 {% endblock %}
