--- a/static/style.css
+++ b/static/style.css
@@ -4,9 +4,22 @@ body {
     font-size: 16px;
 }
 
-body > header {
+header {
     margin: 0;
     background-color: #d0ff82;
     padding: 5px;
     color: black;
+    
+}
+
+header > div > nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
