added delete button to guitar edit form

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <div>
             <nav>
                 
-                <span><a href="{{ url_for('guitars.guitars') }}">stock</a></span>
+                <span><a href="{{ url_for('guitars.guitars') }}">guitars</a></span>
                 <span><a href="{{ url_for('home') }}">home</a></span>
                 <span><a href="{{ url_for('guitars.makers') }}">makers</a></span>
                 
