--- a/templates/guitars/edit.html
+++ b/templates/guitars/edit.html
@@ -47,7 +47,10 @@ Edit Guitars!
 </div>
 
 <button type="submit">Update Guitar</button>
+</form>
 
+<form action="/guitars/delete/{{guitar.id}}" method="POST">
+    <input type="submit" value="Delete Guitar">
 </form>
 
 {% endblock %}
