--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block home %}
 <section>
-
-    <img src ="/static/images/pirate_guitarist_sm.jpg" alt="pirate guitarist" class="center">
+<br>
+    <img src ="/static/images/ralph_pirate.PNG" alt="pirate guitarist" class="center">
 
 </section>
 {% endblock %}
