changed header of base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <header>
-        <img src="/static/images/guitaarrr_logo.png" class="center">
+        <img src="/static/images/guitaarrr_logo3.png" class="center">
         <div>
             <nav>
                 
-                <span><a href="{{ url_for('guitars.guitars') }}">guitars</a></span>
+              
                 <span><a href="{{ url_for('home') }}">home</a></span>
+                <span><a href="{{ url_for('guitars.guitars') }}">stock</a></span>
                 <span><a href="{{ url_for('guitars.makers') }}">makers</a></span>
                 
             </nav>
