--- a/static/style.css
+++ b/static/style.css
@@ -6,8 +6,8 @@ body {
 
 header {
     margin: 0;
-    background-color: #d0ff82;
-    padding: 5px;
+    background-color: #c8ff6d;
+    padding: 10px;
     color: black;
     
 }
