--- a/templates/guitars/edit.html
+++ b/templates/guitars/edit.html
@@ -20,18 +20,18 @@ Edit Guitars!
 </div>
 
 <div>
-    <label for="min_stock">Minimum stock number:</label>
-    <input type="text" id="min_stock" name="min_stock" value="{{guitar.min_stock}}" required autofocus>
+    <label for="minimum stock">Minimum stock number:</label>
+    <input type="number" id="min_stock" name="min_stock" value="{{guitar.min_stock}}" required autofocus>
 </div>
 
 <div>
     <label for="cost price">Cost price: &pound;</label>
-    <input type="text" id="buy_price" name="buy_price" value="{{"{:.2f}".format(guitar.buy_price)}}" required autofocus>
+    <input type="number" id="buy_price" name="buy_price" value="{{"{:.2f}".format(guitar.buy_price)}}" required autofocus>
 </div>
 
 <div>
     <label for="retail price">Retail price: &pound;</label>
-    <input type="text" id="sell_price" name="sell_price" value="{{"{:.2f}".format(guitar.sell_price)}}" required autofocus>
+    <input type="number" id="sell_price" name="sell_price" value="{{"{:.2f}".format(guitar.sell_price)}}" required autofocus>
 </div>
 
 <div>
