--- a/templates/guitars/edit.html
+++ b/templates/guitars/edit.html
@@ -16,7 +16,7 @@ Edit Guitars!
 
 <div>
     <label for="stock">No. in Stock:</label>
-    <input type="text" id="stock" name="stock" value="{{guitar.stock}}" required autofocus>
+    <input type="number" id="stock" name="stock" value="{{guitar.stock}}" required autofocus>
 </div>
 
 <div>
@@ -26,12 +26,12 @@ Edit Guitars!
 
 <div>
     <label for="cost price">Cost price: &pound;</label>
-    <input type="number" id="buy_price" name="buy_price" value="{{"{:.2f}".format(guitar.buy_price)}}" required autofocus>
+    <input type="text" id="buy_price" name="buy_price" value="{{"{:.2f}".format(guitar.buy_price)}}" required autofocus>
 </div>
 
 <div>
     <label for="retail price">Retail price: &pound;</label>
-    <input type="number" id="sell_price" name="sell_price" value="{{"{:.2f}".format(guitar.sell_price)}}" required autofocus>
+    <input type="text" id="sell_price" name="sell_price" value="{{"{:.2f}".format(guitar.sell_price)}}" required autofocus>
 </div>
 
 <div>
