--- a/templates/makers/edit.html
+++ b/templates/makers/edit.html
@@ -24,6 +24,23 @@ Edit Maker!
     <input type="text" id="email" name="email" value="{{maker.email}}" required autofocus>
 </div>
 
+<div>
+    <label for="Active">Active?</label>
+    <select id="active" name="active">
+
+    <option value="true"
+        {% if maker.active == True %} selected="selected" {% endif %}>
+        Yes
+    </option>
+
+    <option value="false"
+        {% if maker.active == False %} selected="selected" {% endif %}>
+        No
+    </option>
+
+    </select>
+</div>
+
 
 <button type="submit">Update Maker</button>
 </form>
