--- a/templates/makers/new.html
+++ b/templates/makers/new.html
@@ -26,13 +26,13 @@ Add new makers!
 </div>
 
 
-<div>
+<!-- <div>
     <label for="Active">Active:</label>
     <select id="active" name="active">
     <option value="true">Yes</option>
     <option value="false">No</option>
     </select>
-</div>
+</div> -->
 
 
 <button type="submit">Add Maker</button>
