added new maker link to new guitar form

--- a/templates/guitars/index.html
+++ b/templates/guitars/index.html
@@ -15,8 +15,11 @@
 {% else %}
 <p>{{guitar.stock}} in stock</p>
 {% endif %}
-<p>Cost price: &pound;{{"{:.2f}".format(guitar.buy_price)}}</p>
+
 <p>Retail price: &pound;{{"{:.2f}".format(guitar.sell_price)}}</p>
+<p>Cost price: &pound;{{"{:.2f}".format(guitar.buy_price)}}</p>
+
+<p>Markup: &pound;{{ "{:.2f}".format(guitar.sell_price - guitar.buy_price) }}</p>
 <p>Maker: {{guitar.maker.name}}</p>
 
 <!-- Edit/delete button -->
