--- a/templates/guitars/new.html
+++ b/templates/guitars/new.html
@@ -44,6 +44,7 @@ Add new guitars!
         </option>
     {% endfor %}
     </select>
+    <span><a href="/makers/new">add new maker</a></p></span>
 </div>
 
 
