--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <section>
 <br>
     <img src ="/static/images/ralph_pirate.PNG" alt="pirate guitarist" class="center">
+    <img src ="/static/images/Landlubbers.jpg" alt="Serving Landlubbers since 1685" class="center">
+
 
 </section>
 {% endblock %}
