--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
 <title>guitaarrr! shop inventory</title>
 </head>
 <body>
@@ -15,7 +18,7 @@
                 
               
                 <span><a href="{{ url_for('home') }}">home</a></span>
-                <span><a href="{{ url_for('guitars.guitars') }}">stock</a></span>
+                <span><a href="{{ url_for('guitars.guitars') }}">guitars</a></span>
                 <span><a href="{{ url_for('guitars.makers') }}">makers</a></span>
                 
             </nav>
