--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,10 @@
 <section>
 <br>
     <img src ="/static/images/ralph_pirate.PNG" alt="pirate guitarist" class="center">
-    <img src ="/static/images/Landlubbers.jpg" alt="Serving Landlubbers since 1685" class="center">
+    <!-- <img src ="/static/images/Landlubbers.jpg" alt="Serving Landlubbers since 1685" class="center">
+    -->
 
+    <p class="slogan">Serving Landlubbers since 1685</p>
 
 </section>
 {% endblock %}
