--- a/templates/guitars/edit.html
+++ b/templates/guitars/edit.html
@@ -46,11 +46,13 @@ Edit Guitars!
     </select>
 </div>
 
-<button type="submit">Update Guitar</button>
+<button type="submit" class="link-button">update guitar</button>
 </form>
 
+
 <form action="/guitars/delete/{{guitar.id}}" method="POST">
-    <input type="submit" value="Delete Guitar">
+    <input type="submit" value="delete guitar" class="link-button">
 </form>
+
 
 {% endblock %}
