--- a/templates/guitars/index.html
+++ b/templates/guitars/index.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% block home %}
+<br>
 
-<a href="/guitars/new">add new guitar</a></p>
-<section class="guitars">
+<div class="link-container">
+<span><a href="/guitars/new">add new guitar</a></span>
+<span><a href="/filter">filter by maker</a></span>
+</div>
+
+    <div class="guitar-container">
 {% for guitar in all_guitars %}
 <div class="guitar">
-    
-    
+        
 <p><b>{{guitar.name}}</b></p>
 <p>{{guitar.description}}</p>
 {% if guitar.stock == 0 %}
@@ -16,7 +20,6 @@
 {% else %}
 <p>{{guitar.stock}} in stock</p>
 {% endif %}
-<div></div>
 
 <p>Retail price: &pound;{{"{:.2f}".format(guitar.sell_price)}}</p>
 <p>Cost price: &pound;{{"{:.2f}".format(guitar.buy_price)}}</p>
@@ -25,17 +28,15 @@
 <p>Maker: {{guitar.maker.name}}</p>
 
 <!-- Edit/delete button -->
-    <form action="/guitars/edit/{{guitar.id}}" method="GET">
+    <form action="/guitars/edit/{{guitar.id}}" method="GET" >
     <input type="submit" value="Edit/Delete">
     </form>
 
     </div>
+    {% endfor %}
 
 </div>
 
 
-</section>
-
-{% endfor %}
 
 {% endblock %}
