--- a/templates/guitars/new.html
+++ b/templates/guitars/new.html
@@ -24,22 +24,22 @@
 
 <div>
     <label for="stock">No. in Stock:</label>
-    <input type="number" size="1" id="stock" name="stock"  placeholder="Stock number" required autofocus>
+    <input type="number" size="1" id="stock" name="stock"  placeholder="Stock No." required autofocus>
 </div>
 
 <div>
     <label for="minimum stock">Minimum stock number:</label>
-    <input type="number" id="min_stock" name="min_stock" placeholder="Min. stock no." required autofocus>
+    <input type="number" id="min_stock" name="min_stock" placeholder="Min. Stock" required autofocus>
 </div>
 
 <div>
     <label for="cost price">Cost price: &nbsp; &pound;</label>
-    <input type="text" id="buy_price" class="price-input" name="buy_price" placeholder="Cost price" required autofocus>
+    <input type="text" id="buy_price" class="price-edit" name="buy_price" placeholder="Cost price" required autofocus>
 </div>
 
 <div>
     <label for="retail price">Retail price: &pound;</label>
-    <input type="text" id="sell_price" class="price-input" name="sell_price" placeholder="Retail price" required autofocus>
+    <input type="text" id="sell_price" class="price-edit" name="sell_price" placeholder="Retail price" required autofocus>
 </div>
 
 <div>
