--- a/templates/makers/new.html
+++ b/templates/makers/new.html
@@ -19,7 +19,7 @@
 
 <div>
     <label for="contact">Contact:</label>
-    <textarea type="text" id="contact" name="contact" rows="1" cols="35" placeholder="Contact" required autofocus></textarea>
+    <textarea id="contact" name="contact" rows="1" cols="35" placeholder="Contact" required autofocus></textarea>
 </div>
 
 <div>
@@ -28,8 +28,8 @@
 </div>
 
 <div>
-    <label for="email">Email address:&nbsp;</label>
-    <input type="text" id="email" name="email" class="tel-input"  placeholder="Email" required autofocus>
+    <label for="email">Email:</label>
+    <input type="text" id="email" name="email" class="email"  placeholder="Email" required autofocus>
 </div>
 
 
