--- a/templates/guitars/edit.html
+++ b/templates/guitars/edit.html
@@ -24,7 +24,7 @@
 
 <div>
     <label for="stock">No. in Stock:</label>
-    <input type="number" id="stock" name="stock" value="{{guitar.stock}}" required autofocus>
+    <input type="number" id="stock" name="stock" value="{{guitar.stock}}" required>
 </div>
 
 <div>
