--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% block home %}
-<section class="homepage">
 <br>
-    <img src ="/static/images/ralph_pirate.PNG" alt="pirate guitarist" class="center">
-    <!-- <img src ="/static/images/Landlubbers.jpg" alt="Serving Landlubbers since 1685" class="center">
-    -->
+<section class="homepage">
+<div>
+    <img src ="/static/images/ralph_pirate.PNG" alt="pirate guitarist" width="200">
+</div>
 
+<div>
     <p class="slogan">Serving Landlubbers since 1685</p>
+</div>
 
 </section>
 {% endblock %}
