tidied some link names

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <img src="/static/images/guitaarrr_logo3.png" class="center">
-        <div>
+        <!-- <div>
             <nav>
                 
               
@@ -23,7 +23,7 @@
                 
             </nav>
 
-        </div>
+        </div> -->
 
 
 
