--- a/templates/makers/edit.html
+++ b/templates/makers/edit.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 {% block home %}
 
+<header>
+    <div>
+        <nav>
+            
+            <span><a href="{{ url_for('home') }}">home</a></span>
+            <span><a href="{{ url_for('guitars.guitars') }}">guitars</a></span>
+            <span><a href="{{ url_for('guitars.makers') }}" style="color:red">makers</a></span>
+            
+        </nav>
+    </div>
+</header>
+
 <br>
 <div style="text-align:center;">
     <b>editing maker</b>
