--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body {
 header {
     margin: 0;
     background-color: #c8ff6d;
-    padding: 10px;
+    padding: 5px;
     color: black;
     
 }
@@ -143,8 +143,9 @@ input[type='number']{
 .homepage {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-left: 50px;
+    justify-content: space-between;
+    margin-left: 100px;
+
 }
 
 
@@ -156,4 +157,6 @@ input[type='number']{
     margin-right: auto;
     width: 50%;
     text-align: center;
+    margin-left: 0;
+    margin-right: 0;
 }
