--- a/templates/guitars/new.html
+++ b/templates/guitars/new.html
@@ -1,9 +1,21 @@
 {% extends "base.html" %}
 {% block home %}
 
+<header>
+    <div>
+        <nav>
+            
+            <span><a href="{{ url_for('home') }}">home</a></span>
+            <span><a href="{{ url_for('guitars.guitars') }}" style="color:red">guitars</a></span>
+            <span><a href="{{ url_for('guitars.makers') }}">makers</a></span>
+            
+        </nav>
+    </div>
+</header>
+
 <br>
 <div style="text-align:center;">
-    <b>adding new guitar</b>
+    <b>adding guitar</b>
     </div>
 
 <section class="guitar-container">
