--- a/templates/makers/new.html
+++ b/templates/makers/new.html
@@ -1,9 +1,21 @@
 {% extends "base.html" %}
 {% block home %}
 
+<header>
+    <div>
+        <nav>
+            
+            <span><a href="{{ url_for('home') }}">home</a></span>
+            <span><a href="{{ url_for('guitars.guitars') }}">guitars</a></span>
+            <span><a href="{{ url_for('guitars.makers') }}" style="color:red">makers</a></span>
+            
+        </nav>
+    </div>
+</header>
+
 <br>
 <div style="text-align:center;">
-    <b>adding new maker</b>
+    <b>adding maker</b>
     </div>
 
 <section class="guitar-container">
