--- a/templates/makers/edit.html
+++ b/templates/makers/edit.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
 {% block home %}
 
+<!-- NAVIGATION -->
 <header>
     <div>
         <nav>
@@ -13,64 +15,71 @@
     </div>
 </header>
 
+
 <br>
-<div style="text-align:center;">
-    <b>editing maker</b>
+
+    <div style="text-align:center;">
+        <b>editing maker</b>
     </div>
 
-    <section class="guitar-container">
+<section class="guitar-container">
 
-        <div class="new-guitar">
+    <div class="new-guitar">
 
-<form action="/makers/update/{{maker.id}}" method="post">
+        <!-- START OF FORM -->
+        <form action="/makers/update/{{maker.id}}" method="post">
 
-<div>
-    <label for="name">Name:</label>
-    <textarea  id="name" name="name" rows="1" cols="35" required>{{maker.name}}</textarea>
-</div>
+            <div>
+                <label for="name">Name:</label>
+                <textarea  id="name" name="name" rows="1" cols="35" required>{{maker.name}}</textarea>
+            </div>
 
-<div>
-    <label for="contact">Contact:</label>
-    <textarea id="contact" name="contact" rows="1" cols="35" required autofocus>{{maker.contact}}</textarea>
-</div>
+            <div>
+                <label for="contact">Contact:</label>
+                <textarea id="contact" name="contact" rows="1" cols="35" required autofocus>{{maker.contact}}</textarea>
+            </div>
 
-<div>
-    <label for="telephone">Phone number:</label>
-    <input type="text" id="tel" name="tel" class="tel-input" value="{{maker.tel}}" required autofocus>
-</div>
+            <div>
+                <label for="telephone">Phone number:</label>
+                <input type="text" id="tel" name="tel" class="tel-input" value="{{maker.tel}}" required autofocus>
+            </div>
 
-<div>
-    <label for="email">Email:</label>
-    <input type="text" id="email" name="email" class="email" value="{{maker.email}}" required autofocus>
-</div>
+            <div>
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email" class="email" value="{{maker.email}}" required autofocus>
+            </div>
 
-<div>
-    <label for="Active">Active?</label>
-    <select id="active" name="active">
+            <div>
+                <label for="Active">Active?</label>
+                <select id="active" name="active">
 
-    <option value="true"
-        {% if maker.active == True %} selected="selected" {% endif %}>
-        Yes
-    </option>
+                    <option value="true"
+                    {% if maker.active == True %} selected="selected" {% endif %}>
+                        Yes
+                    </option>
 
-    <option value="false"
-        {% if maker.active == False %} selected="selected" {% endif %}>
-        No
-    </option>
+                    <option value="false"
+                    {% if maker.active == False %} selected="selected" {% endif %}>
+                        No
+                    </option>
 
-    </select>
-</div>
+                </select>
+            </div>
 
 
-<button type="submit">Update Maker</button>
-</form>
+            <button type="submit">Update Maker</button>
+        
+        </form>
     
+        <!-- DELETE BUTTON -->
+        <form action="/makers/delete/{{maker.id}}" method="POST">
+            
+            <input type="submit" value="Delete Maker">
+        
+        </form>
 
-<form action="/makers/delete/{{maker.id}}" method="POST">
-    <input type="submit" value="Delete Maker">
-</form>
+    </div>
 
-</div>
 </section>
 
 {% endblock %}
