more html tidying

--- a/templates/makers/new.html
+++ b/templates/makers/new.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
 {% block home %}
 
+<!-- NAVIGATION -->
 <header>
     <div>
         <nav>
@@ -14,55 +16,46 @@
 </header>
 
 <br>
-<div style="text-align:center;">
-    <b>adding maker</b>
+    <div style="text-align:center;">
+        <b>adding maker</b>
     </div>
 
 <section class="guitar-container">
 
     <div class="new-guitar">
 
-<form action="/makers" method="post">
+        <!-- START OF FORM -->
 
-<div>
-    <label for="name">Name:</label>
-    <textarea  id="name" name="name" rows="1" cols="35" placeholder="Name" required autofocus></textarea>
-</div>
+        <form action="/makers" method="post">
 
-<div>
-    <label for="contact">Contact:</label>
-    <textarea id="contact" name="contact" rows="1" cols="35" placeholder="Contact" required autofocus></textarea>
-</div>
+            <div>
+                <label for="name">Name:</label>
+                <textarea  id="name" name="name" rows="1" cols="35" placeholder="Name" required autofocus></textarea>
+            </div>
 
-<div>
-    <label for="telephone">Phone number:</label>
-    <input type="text" id="tel" name="tel" class="tel-input" placeholder="Tel no." required autofocus>
-</div>
+            <div>
+                <label for="contact">Contact:</label>
+                <textarea id="contact" name="contact" rows="1" cols="35" placeholder="Contact" required autofocus></textarea>
+            </div>
 
-<div>
-    <label for="email">Email:</label>
-    <input type="text" id="email" name="email" class="email"  placeholder="Email" required autofocus>
-</div>
+            <div>
+                <label for="telephone">Phone number:</label>
+                <input type="text" id="tel" name="tel" class="tel-input" placeholder="Tel no." required autofocus>
+            </div>
+
+            <div>
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email" class="email"  placeholder="Email" required autofocus>
+            </div>
 
 
 
-<button type="submit">Add Maker</button>
+            <button type="submit">Add Maker</button>
 
-</form>
-</div>
+        </form>
+    </div>
 </section>
 
 {% endblock %}
 
 
-
-
-
-
-<!-- <div>
-    <label for="Active">Active:</label>
-    <select id="active" name="active">
-    <option value="true">Yes</option>
-    <option value="false">No</option>
-    </select>
-</div> -->
