--- a/templates/guitars/edit.html
+++ b/templates/guitars/edit.html
@@ -14,66 +14,67 @@
 </header>
 
 <br>
+
 <div style="text-align:center;">
     <b>editing guitar</b>
+</div>
+
+<section class="guitar-container">
+
+    <div class="new-guitar">
+
+        <form action="/guitars/update/{{guitar.id}}" method="post">
+
+            <div>
+                <label for="name">Name:</label>
+                <textarea  id="name" name="name" rows="1" cols="35" placeholder="Name" required>{{guitar.name}}</textarea>
+            </div>
+
+            <div>
+                <label for="description">Description:</label>
+                <textarea id="description" name="description"  rows="3" cols="35" required autofocus>{{guitar.description}}</textarea>
+            </div>
+
+            <div>
+                <label for="stock">No. in Stock:</label>
+                <input type="number" id="stock" name="stock" value="{{guitar.stock}}" required>
+            </div>
+
+            <div>
+                <label for="minimum stock">Minimum stock number:</label>
+                <input type="number" id="min_stock" name="min_stock" value="{{guitar.min_stock}}" required autofocus>
+            </div>
+
+            <div>
+                <label for="cost price">Cost price:&nbsp; &pound;</label>
+                <input type="text" id="buy_price" name="buy_price" class="price-input" value="{{"{:.2f}".format(guitar.buy_price)}}" required autofocus>
+            </div>
+
+            <div>   
+                <label for="retail price">Retail price: &pound;</label>
+                <input type="text" id="sell_price" name="sell_price" class="price-input" value="{{"{:.2f}".format(guitar.sell_price)}}" required autofocus>
+            </div>
+
+            <div>
+                <label for="maker">Maker:</label>
+                <select id="maker_id" name="maker_id">
+                    {% for maker in all_makers %}
+                        <option value="{{ maker.id }}"
+                        {% if guitar.maker.id == maker.id %} selected="selected"{% endif %}>
+                        {{ maker.name }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <button type="submit">Update Guitar</button>
+        </form>
+
+        <!-- DELETE BUTTON -->
+        <form action="/guitars/delete/{{guitar.id}}" method="POST">
+            <input type="submit" value="Delete Guitar">
+        </form>
     </div>
-
-    <section class="guitar-container">
-
-        <div class="new-guitar">
-
-<form action="/guitars/update/{{guitar.id}}" method="post">
-
-<div>
-    <label for="name">Name:</label>
-    <textarea  id="name" name="name" rows="1" cols="35" placeholder="Name" required>{{guitar.name}}</textarea>
-</div>
-
-<div>
-    <label for="description">Description:</label>
-    <textarea id="description" name="description"  rows="3" cols="35" required autofocus>{{guitar.description}}</textarea>
-</div>
-
-<div>
-    <label for="stock">No. in Stock:</label>
-    <input type="number" id="stock" name="stock" value="{{guitar.stock}}" required>
-</div>
-
-<div>
-    <label for="minimum stock">Minimum stock number:</label>
-    <input type="number" id="min_stock" name="min_stock" value="{{guitar.min_stock}}" required autofocus>
-</div>
-
-<div>
-    <label for="cost price">Cost price:&nbsp; &pound;</label>
-    <input type="text" id="buy_price" name="buy_price" class="price-input" value="{{"{:.2f}".format(guitar.buy_price)}}" required autofocus>
-</div>
-
-<div>
-    <label for="retail price">Retail price: &pound;</label>
-    <input type="text" id="sell_price" name="sell_price" class="price-input" value="{{"{:.2f}".format(guitar.sell_price)}}" required autofocus>
-</div>
-
-<div>
-    <label for="maker">Maker:</label>
-    <select id="maker_id" name="maker_id">
-    {% for maker in all_makers %}
-        <option value="{{ maker.id }}"
-        {% if guitar.maker.id == maker.id %} selected="selected"{% endif %}>
-        {{ maker.name }}
-        </option>
-    {% endfor %}
-    </select>
-</div>
-
-<button type="submit">Update Guitar</button>
-</form>
-
-
-<form action="/guitars/delete/{{guitar.id}}" method="POST">
-    <input type="submit" value="Delete Guitar">
-</form>
-</div>
 
 </section>
 
